// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`helpers > 42 > arrayElement > noArgs 1`] = `"b"`;

exports[`helpers > 42 > arrayElement > with array 1`] = `"o"`;

exports[`helpers > 42 > arrayElements > noArgs 1`] = `
[
  "b",
  "c",
]
`;

exports[`helpers > 42 > arrayElements > with array 1`] = `
[
  "r",
  "W",
  "e",
  "d",
  "l",
]
`;

exports[`helpers > 42 > arrayElements > with array and count 1`] = `
[
  "l",
  "r",
  "o",
]
`;

exports[`helpers > 42 > arrayElements > with array and count range 1`] = `
[
  "d",
  "l",
]
`;

exports[`helpers > 42 > fake > with a dynamic template 1`] = `"my string: Cky2eiXX/J"`;

exports[`helpers > 42 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 42 > fake > with empty string 1`] = `""`;

exports[`helpers > 42 > fake > with multiple dynamic templates 1`] = `"Sandy"`;

exports[`helpers > 42 > fake > with multiple static templates 1`] = `"B"`;

exports[`helpers > 42 > maybe > with only value 1`] = `"Hello World!"`;

exports[`helpers > 42 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 42 > multiple > with method and count 1`] = `
[
  37454,
  79654,
  95071,
  18343,
  73199,
]
`;

exports[`helpers > 42 > multiple > with method and count range 1`] = `
[
  79654,
  95071,
  18343,
  73199,
]
`;

exports[`helpers > 42 > multiple > with only method 1`] = `
[
  37454,
  79654,
  95071,
]
`;

exports[`helpers > 42 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 42 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 42 > objectKey > simple 1`] = `"b"`;

exports[`helpers > 42 > objectValue > simple 1`] = `2`;

exports[`helpers > 42 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 42 > rangeToNumber > with range 1`] = `4`;

exports[`helpers > 42 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 42 > regexpStyleStringParse > only symbols 1`] = `"###test2"`;

exports[`helpers > 42 > regexpStyleStringParse > some string 1`] = `"Hello !###test2"`;

exports[`helpers > 42 > replaceCreditCardSymbols > noArgs 1`] = `"6453-3791-7755-1410-0489"`;

exports[`helpers > 42 > replaceCreditCardSymbols > only symbols 1`] = `"7917-6-7563-4"`;

exports[`helpers > 42 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°4\\"§$%&/()=?\`+7*,..-;:_NaN"`;

exports[`helpers > 42 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 42 > replaceSymbolWithNumber > only symbols 1`] = `"47917"`;

exports[`helpers > 42 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°4\\"§$%&/()=?\`+7*,..-;:_"`;

exports[`helpers > 42 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 42 > replaceSymbols > only symbols 1`] = `"3U17U5"`;

exports[`helpers > 42 > replaceSymbols > some string 1`] = `"^1234567890ß´°!\\"§$%&/()=J\`+71,..-;:_"`;

exports[`helpers > 42 > shuffle > with array 1`] = `
[
  "!",
  "W",
  "d",
  "H",
  "l",
  "l",
  "o",
  " ",
  "e",
  "l",
  "r",
  "o",
]
`;

exports[`helpers > 42 > shuffle > with array and inplace false 1`] = `
[
  "!",
  "W",
  "d",
  "H",
  "l",
  "l",
  "o",
  " ",
  "e",
  "l",
  "r",
  "o",
]
`;

exports[`helpers > 42 > shuffle > with array and inplace true 1`] = `
[
  "!",
  "W",
  "d",
  "H",
  "l",
  "l",
  "o",
  " ",
  "e",
  "l",
  "r",
  "o",
]
`;

exports[`helpers > 42 > slugify > noArgs 1`] = `""`;

exports[`helpers > 42 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 42 > unique > with () => number 1`] = `3373557438480384`;

exports[`helpers > 42 > unique > with () => number and args 1`] = `19`;

exports[`helpers > 42 > unique > with customMethod 1`] = `"Test-188"`;

exports[`helpers > 42 > unique > with customMethod and args 1`] = `"prefix-1-Test-188"`;

exports[`helpers > 42 > uniqueArray > with array 1`] = `
[
  "H",
  "l",
  "W",
]
`;

exports[`helpers > 42 > weightedArrayElement > with array 1`] = `"sunny"`;

exports[`helpers > 42 > weightedArrayElement > with array with percentages 1`] = `"sunny"`;

exports[`helpers > 1211 > arrayElement > noArgs 1`] = `"c"`;

exports[`helpers > 1211 > arrayElement > with array 1`] = `"!"`;

exports[`helpers > 1211 > arrayElements > noArgs 1`] = `
[
  "a",
  "c",
  "b",
]
`;

exports[`helpers > 1211 > arrayElements > with array 1`] = `
[
  "d",
  "o",
  "r",
  "!",
  "l",
  "H",
  "W",
  "e",
  "l",
  "o",
  "l",
  " ",
]
`;

exports[`helpers > 1211 > arrayElements > with array and count 1`] = `
[
  "r",
  " ",
  "!",
]
`;

exports[`helpers > 1211 > arrayElements > with array and count range 1`] = `
[
  "e",
  "l",
  "o",
  "l",
  " ",
]
`;

exports[`helpers > 1211 > fake > with a dynamic template 1`] = `"my string: wKti5-}$_/"`;

exports[`helpers > 1211 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 1211 > fake > with empty string 1`] = `""`;

exports[`helpers > 1211 > fake > with multiple dynamic templates 1`] = `"La Crosse"`;

exports[`helpers > 1211 > fake > with multiple static templates 1`] = `"C"`;

exports[`helpers > 1211 > maybe > with only value 1`] = `undefined`;

exports[`helpers > 1211 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 1211 > multiple > with method and count 1`] = `
[
  92852,
  45901,
  89347,
  77826,
  22557,
]
`;

exports[`helpers > 1211 > multiple > with method and count range 1`] = `
[
  45901,
  89347,
  77826,
  22557,
  12988,
  99725,
  3842,
  67199,
  15897,
  68481,
]
`;

exports[`helpers > 1211 > multiple > with only method 1`] = `
[
  92852,
  45901,
  89347,
]
`;

exports[`helpers > 1211 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 1211 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 1211 > objectKey > simple 1`] = `"c"`;

exports[`helpers > 1211 > objectValue > simple 1`] = `3`;

exports[`helpers > 1211 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 1211 > rangeToNumber > with range 1`] = `10`;

exports[`helpers > 1211 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 1211 > regexpStyleStringParse > only symbols 1`] = `"###test5"`;

exports[`helpers > 1211 > regexpStyleStringParse > some string 1`] = `"Hello !###test5"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > noArgs 1`] = `"6453-9487-2190-6162-7434"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > only symbols 1`] = `"4872-9-1927-1"`;

exports[`helpers > 1211 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°9\\"§$%&/()=?\`+4*,..-;:_NaN"`;

exports[`helpers > 1211 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 1211 > replaceSymbolWithNumber > only symbols 1`] = `"94872"`;

exports[`helpers > 1211 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°9\\"§$%&/()=?\`+4*,..-;:_"`;

exports[`helpers > 1211 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 1211 > replaceSymbols > only symbols 1`] = `"9L72D0"`;

exports[`helpers > 1211 > replaceSymbols > some string 1`] = `"^1234567890ß´°!\\"§$%&/()=Y\`+47,..-;:_"`;

exports[`helpers > 1211 > shuffle > with array 1`] = `
[
  "l",
  "l",
  "o",
  "l",
  "W",
  "d",
  "H",
  "e",
  "o",
  "r",
  " ",
  "!",
]
`;

exports[`helpers > 1211 > shuffle > with array and inplace false 1`] = `
[
  "l",
  "l",
  "o",
  "l",
  "W",
  "d",
  "H",
  "e",
  "o",
  "r",
  " ",
  "!",
]
`;

exports[`helpers > 1211 > shuffle > with array and inplace true 1`] = `
[
  "l",
  "l",
  "o",
  "l",
  "W",
  "d",
  "H",
  "e",
  "o",
  "r",
  " ",
  "!",
]
`;

exports[`helpers > 1211 > slugify > noArgs 1`] = `""`;

exports[`helpers > 1211 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 1211 > unique > with () => number 1`] = `8363366036799488`;

exports[`helpers > 1211 > unique > with () => number and args 1`] = `47`;

exports[`helpers > 1211 > unique > with customMethod 1`] = `"Test-465"`;

exports[`helpers > 1211 > unique > with customMethod and args 1`] = `"prefix-1-Test-465"`;

exports[`helpers > 1211 > uniqueArray > with array 1`] = `
[
  "W",
  "d",
  "l",
]
`;

exports[`helpers > 1211 > weightedArrayElement > with array 1`] = `"snowy"`;

exports[`helpers > 1211 > weightedArrayElement > with array with percentages 1`] = `"snowy"`;

exports[`helpers > 1337 > arrayElement > noArgs 1`] = `"a"`;

exports[`helpers > 1337 > arrayElement > with array 1`] = `"l"`;

exports[`helpers > 1337 > arrayElements > noArgs 1`] = `
[
  "b",
]
`;

exports[`helpers > 1337 > arrayElements > with array 1`] = `
[
  "l",
  "l",
  "e",
  "W",
]
`;

exports[`helpers > 1337 > arrayElements > with array and count 1`] = `
[
  "e",
  "W",
  "l",
]
`;

exports[`helpers > 1337 > arrayElements > with array and count range 1`] = `
[
  "e",
  "W",
]
`;

exports[`helpers > 1337 > fake > with a dynamic template 1`] = `"my string: 9U/4:SK$>6"`;

exports[`helpers > 1337 > fake > with a static template 1`] = `"my test string"`;

exports[`helpers > 1337 > fake > with empty string 1`] = `""`;

exports[`helpers > 1337 > fake > with multiple dynamic templates 1`] = `"U/4:SK$>6Q"`;

exports[`helpers > 1337 > fake > with multiple static templates 1`] = `"A"`;

exports[`helpers > 1337 > maybe > with only value 1`] = `"Hello World!"`;

exports[`helpers > 1337 > maybe > with value and probability 1`] = `undefined`;

exports[`helpers > 1337 > multiple > with method and count 1`] = `
[
  26202,
  56052,
  15868,
  21258,
  27812,
]
`;

exports[`helpers > 1337 > multiple > with method and count range 1`] = `
[
  56052,
  15868,
  21258,
]
`;

exports[`helpers > 1337 > multiple > with only method 1`] = `
[
  26202,
  56052,
  15868,
]
`;

exports[`helpers > 1337 > mustache > template with method 1`] = `"Hello John!"`;

exports[`helpers > 1337 > mustache > template with string 1`] = `"Hello John!"`;

exports[`helpers > 1337 > objectKey > simple 1`] = `"a"`;

exports[`helpers > 1337 > objectValue > simple 1`] = `1`;

exports[`helpers > 1337 > rangeToNumber > with number 1`] = `5`;

exports[`helpers > 1337 > rangeToNumber > with range 1`] = `3`;

exports[`helpers > 1337 > regexpStyleStringParse > noArgs 1`] = `""`;

exports[`helpers > 1337 > regexpStyleStringParse > only symbols 1`] = `"###test2"`;

exports[`helpers > 1337 > regexpStyleStringParse > some string 1`] = `"Hello !###test2"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > noArgs 1`] = `"6453-2512-2540-3255-2399"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > only symbols 1`] = `"5122-5-5424-8"`;

exports[`helpers > 1337 > replaceCreditCardSymbols > some string 1`] = `"^1234567890ß´°4\\"§$%&/()=?\`+5*,..-;:_NaN"`;

exports[`helpers > 1337 > replaceSymbolWithNumber > noArgs 1`] = `""`;

exports[`helpers > 1337 > replaceSymbolWithNumber > only symbols 1`] = `"45122"`;

exports[`helpers > 1337 > replaceSymbolWithNumber > some string 1`] = `"^1234567890ß´°4\\"§$%&/()=?\`+5*,..-;:_"`;

exports[`helpers > 1337 > replaceSymbols > noArgs 1`] = `""`;

exports[`helpers > 1337 > replaceSymbols > only symbols 1`] = `"2OF2OA"`;

exports[`helpers > 1337 > replaceSymbols > some string 1`] = `"^1234567890ß´°!\\"§$%&/()=G\`+5F,..-;:_"`;

exports[`helpers > 1337 > shuffle > with array 1`] = `
[
  " ",
  "d",
  "o",
  "r",
  "H",
  "o",
  "!",
  "l",
  "l",
  "e",
  "W",
  "l",
]
`;

exports[`helpers > 1337 > shuffle > with array and inplace false 1`] = `
[
  " ",
  "d",
  "o",
  "r",
  "H",
  "o",
  "!",
  "l",
  "l",
  "e",
  "W",
  "l",
]
`;

exports[`helpers > 1337 > shuffle > with array and inplace true 1`] = `
[
  " ",
  "d",
  "o",
  "r",
  "H",
  "o",
  "!",
  "l",
  "l",
  "e",
  "W",
  "l",
]
`;

exports[`helpers > 1337 > slugify > noArgs 1`] = `""`;

exports[`helpers > 1337 > slugify > some string 1`] = `"hello-world"`;

exports[`helpers > 1337 > unique > with () => number 1`] = `2360108468142080`;

exports[`helpers > 1337 > unique > with () => number and args 1`] = `13`;

exports[`helpers > 1337 > unique > with customMethod 1`] = `"Test-132"`;

exports[`helpers > 1337 > unique > with customMethod and args 1`] = `"prefix-1-Test-132"`;

exports[`helpers > 1337 > uniqueArray > with array 1`] = `
[
  "o",
  "H",
  "d",
]
`;

exports[`helpers > 1337 > weightedArrayElement > with array 1`] = `"sunny"`;

exports[`helpers > 1337 > weightedArrayElement > with array with percentages 1`] = `"sunny"`;
